# fastapi-mongodb-boilerplate

./: .cspell.json  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.celery  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dependabot.yml  pr-checks.yml
app/: __init__.py  app.py
app/common/: __init__.py
app/common/enums/: __init__.py  user.py
app/common/exceptions/: __init__.py
app/common/schemas/: __init__.py  auth.py  errors.py
app/common/types/: __init__.py  database.py
app/common/utils/: __init__.py  logging.py  pagination.py
app/core/: config.py
app/domain/auth/: __init__.py
app/domain/auth/use_cases/: __init__.py  change_password.py  deactivate_account.py  get_current_user.py  login.py  logout.py  refresh_token.py  register.py  update_profile.py
app/domain/user/: __init__.py
app/domain/user/entities/: user.py
app/domain/user/types/: __init__.py  repository.py
app/domain/user/use_cases/: __init__.py  create_user.py  deactivate_user.py  get_user.py  update_user.py
app/infrastructure/cache/: __init__.py  cache_service.py  redis_client.py
app/infrastructure/db/: __init__.py
app/infrastructure/db/base/: __init__.py  base_model.py  base_repository.py
app/infrastructure/db/config/: __init__.py  database.py  session.py
app/infrastructure/db/user/: __init__.py  adapter.py  model.py  repository.py
app/infrastructure/security/: jwt.py  password.py
app/infrastructure/tasks/: __init__.py  base.py  celery_app.py  email_tasks.py  user_tasks.py
app/presentation/: __init__.py  exceptions.py
app/presentation/auth/: dependencies.py  routes.py
app/presentation/auth/schemas/: __init__.py  requests.py  responses.py
app/presentation/middleware/: rate_limit.py  trace_id.py
tests/: conftest.py  test_auth.py  test_health.py
